--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.78"
+    created: "2024-10-28T00:47:13.236641868Z"
+    description: SeaweedFS
+    digest: 133070322b110c1e63602230526df191dd727b26b345c95f13f1db0d1849e77b
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-4.0.378.tgz
+    version: 4.0.378
+  - apiVersion: v1
     appVersion: "3.77"
     created: "2024-10-10T08:32:57.958602769Z"
     description: SeaweedFS
@@ -334,4 +343,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-10-10T08:32:57.956115103Z"
+generated: "2024-10-28T00:47:13.233471293Z"
