--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.80"
+    created: "2024-11-18T17:56:18.200803926Z"
+    description: SeaweedFS
+    digest: 0e612f6032a3d7a9cb230bcca075e4f291cd290f2cce9faf78775aa2e0ebfe3e
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-4.0.380.tgz
+    version: 4.0.380
+  - apiVersion: v1
     appVersion: "3.79"
     created: "2024-10-29T02:45:54.838059584Z"
     description: SeaweedFS
@@ -352,4 +361,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-10-29T02:45:54.834118648Z"
+generated: "2024-11-18T17:56:18.198499712Z"
