--- a/weed/command/scaffold/security.toml
+++ b/weed/command/scaffold/security.toml
@@ -98,7 +98,7 @@ key = ""
 # https client for master|volume|filer|etc connection
 # It is necessary that the parameters  [https.volume]|[https.master]|[https.filer] are set
 [https.client]
-enabled = true
+enabled = false
 cert = ""
 key = ""
 ca = ""
